# basica-vscode

./: .gitignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
server/: Cargo.toml  basica-lsp
server/src/: backend.rs  completion.rs  definition.rs  diagnostics.rs  folding.rs  hover.rs  main.rs  references.rs  rename.rs  semantic_tokens.rs  signature.rs  symbols.rs
src/: extension.ts
syntaxes/: basica.tmLanguage.json
